Fixed table alignments for xP,rP edits

--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -3,6 +3,11 @@ body {
     color: lightgray;
 }
 
+.table td,
+.table th {
+    vertical-align: middle;
+}
+
 [v-cloak] {
     display: none;
 }
